--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "cfdi-to-json": "^1.2.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "firebase": "^8.3.2",
-    "mongoose": "^5.12.2"
+    "cfdi-to-json": "1.2.3",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "firebase": "8.3.2",
+    "mongoose": "5.12.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
